# yolov3_interface

./: CMakeLists.txt  README.md  main.cpp
YOLO_V3/config/: coco.data
YOLO_V3/include/: darknet.h
YOLO_V3/src/: DetectResult.h  Detecting.cpp  Detecting.h
